@@ -10,15 +10,15 @@
 	DCD	&100
 	]		; Comment
 	[ {FALSE}
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	]
 	[ {TRUE}
 	DCD	&101
 	|		; Comment
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	]
 	[ {FALSE}
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	|
 	DCD	&102
 	]
@@ -29,77 +29,77 @@
 		DCD	&200
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {TRUE}	; Comment
 		DCD	&201
 		|		; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|		; Comment
 		DCD	&202
 		]		; Comment
 	|
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	]
 	[ {TRUE}
 		DCD	&210
 	|
 		[ {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {FALSE}	; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|		; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]		; Comment
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 	]
 	[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	|
 		[ {TRUE}
 		DCD	&220
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {TRUE}
 		DCD	&221
 		|
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|
 		DCD	&222
 		]
 	]
 	[ {FALSE}
 		[ {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 		[ {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		|
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		]
 	|
 		DCD	&230
@@ -111,15 +111,15 @@
 	DCD	&100
 	ENDIF		; Comment
 	IF {FALSE}
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	ENDIF
 	IF {TRUE}
 	DCD	&101
 	ELSE		; Comment
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	ENDIF
 	IF {FALSE}
-	ASSERT {FALSE}, "May not be assembled"
+	ASSERT {FALSE}
 	ELSE
 	DCD	&102
 	ENDIF
@@ -130,77 +130,77 @@
 		DCD	&200
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {TRUE}	; Comment
 		DCD	&201
 		ELSE		; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE		; Comment
 		DCD	&202
 		ENDIF		; Comment
 	ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ENDIF
 	IF {TRUE}
 		DCD	&210
 	ELSE
 		IF {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {FALSE}	; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE		; Comment
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF		; Comment
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 	ENDIF
 	IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELSE
 		IF {TRUE}
 		DCD	&220
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {TRUE}
 		DCD	&221
 		ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE
 		DCD	&222
 		ENDIF
 	ENDIF
 	IF {FALSE}
 		IF {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 		IF {FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 		ENDIF
 	ELSE
 		DCD	&230
@@ -210,36 +210,36 @@
 	IF	{TRUE}
 		DCD	&400
 	ELIF	{TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ENDIF
 	IF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{TRUE}
 		DCD	&401
 	ELIF	{TRUE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ENDIF
 	IF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{TRUE}
 		DCD	&402
 	ELSE
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ENDIF
 	IF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELIF	{FALSE}
-		ASSERT {FALSE}, "May not be assembled"
+		ASSERT {FALSE}
 	ELSE
 		DCD	&403
 	ENDIF
